<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">隨時隨地遊古蹟</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="strFavorite">我的喜愛</string>
    <string name="monument">香港法定古蹟</string>
    <string name="around_me">我周圍的法定古蹟</string>
    <string name="visitor_notice">參觀古蹟須知</string>
    <string name="contact_office">聯絡部門</string>
    <string name="rating">給我的程式評分</string>
    <string name="favorite">@string/strFavorite</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>@string/monument</item>
        <item>@string/around_me</item>
        <item>@string/favorite</item>
        <item>@string/visitor_notice</item>
        <item>@string/contact_office</item>
        <item>@string/rating</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_people</item>
        <item>@drawable/ic_known</item>
        <item>@drawable/ic_favorite</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_whats_hot</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="menu_item_clear_memory_cache">清除內存圖像</string>
    <string name="menu_item_clear_disc_cache">清除外置卡圖像</string>
    <string name="menu_item_about">關於</string>
    <string name="menu_item_share">分享</string>
    <string name="menu_item_info">資訊</string>
    <string name="menu_item_favorite">加入喜愛</string>
    <string name="menu_item_unfavorite">刪除喜愛</string>
    <string name="menu_item_settings">設定</string>
    <string name="visit_title">參觀古蹟須知</string>
    <string name="visit_text1">1.	法定古蹟位置資料是由古物古蹟辦事處提供，只作識別用。</string>
    <string name="visit_text2">2.	開放時間只作參考，並以相關團體或機構的最新公布為準。</string>
    <string name="visit_text3">3.	基於公眾安全或避免影響日常運作，部分法定古蹟並不對外開放。</string>
    <string name="visit_text4">4.	部分法定古蹟設有預約導賞團或開放日，請與相關團體或機構查詢最新安排。</string>
    <string name="visit_text5">5.	請愛護我們的文化遺產。不要破壞遺址、建築物或設施。</string>
    <string name="visit_text6">6.	參觀時，請避免對建築物業主及使用者造成滋擾。</string>
    <string name="contact_title">聯絡資料</string>
    <string name="dept_heritage">文物保育專員辦事處</string>
    <string name="label_address">地址</string>
    <string name="label_phone">電話號碼</string>
    <string name="label_fax">傳真號碼</string>
    <string name="label_web">網址</string>
    <string name="label_email">電郵地址</string>
    <string name="label_map">地圖</string>
    <string name="dept_monument">古物古蹟辦事處</string>
    <string name="address_dept_heritage">香港添馬添美道2號\n政府總部西翼19樓\n發展局\n文物保育專員辦事處</string>
    <string name="fax_dept_heritage">+ 852 2189 7264</string>
    <string name="email_dept_heritage">wbenq@devb.gov.hk</string>
    <string name="web_dept_heritage">http://www.heritage.gov.hk/</string>
    <string name="desc_map_heritage">文物保育專員辦事處地圖</string>
    <string name="address_dept_monu">香港九龍尖沙咀彌敦道136號</string>
    <string name="fax_dept_monu">+ 852 2721 6216</string>
    <string name="phone_dept_monu">+ 852 2208 4400</string>
    <string name="email_dept_monu">amo@lcsd.gov.hk</string>
    <string name="web_dept_monu">http://www.amo.gov.hk/b5/main.php</string>
    <string name="desc_map_monu">古物古蹟辦事處地圖</string>
    <string name="subject">分享我的應用程式</string>
    <string name="body">我想和你們分享這個應用程序。請瀏覽 %s。</string>
    <string name="share_app">分享經由&#8230;</string>
    <string name="app_not_found">沒有合適的應用程式。</string>
    <string name="dialog_about_title">關於</string>
    <string name="close">關閉</string>
    <string name="software_used">使用的軟件：</string>
    <string name="uil_software">Universal Image Loader</string>
    <string name="uil_copyright">Copyright 2011&#8211;2013, Sergey Tarasevich</string>
    <string name="crouton_software">Crouton</string>
    <string name="crouton_copyright">Copyright 2013, Benjamin Weiss</string>
    <string name="guava_software">Google Guava</string>
    <string name="guava_copyright">Copyright 2011, Guava Authors</string>
    <string name="zxing_software">ZXing ("Zebra Crossing")</string>
    <string name="zxing_copyright">Copyright 2014, Sean Owen</string>
    <string name="expandableTextView">Expandable TextView</string>
    <string name="expandableTextView_copyright">Copyright 2013, Bazlur Rahman</string>
    <string name="prefFragment_software">android-support-v4-preferencefragment</string>
    <string name="prefFragment_copyright">Copyright 2013, kolavar</string>
 
    <string name="loading">載入&#8230;</string>
    <string name="strHK">香港島</string>
    <string name="strKowloon">九龍</string>
    <string name="strNT">新界</string>
    <string name="strIsland">離島</string>
    <string name="strAll">全部</string>
    <string name="placeholder">請選擇地區</string>
    <string name="strInstruction">按一下座標視窗來查看詳細資料</string>
    <string name="no_monument">沒有古蹟。</string>
    <string name="no_favorite">沒有喜愛。</string>
    <string name="city_name">不詳</string>
    <string name="error_connectionfailed">連線失敗</string>
    <string name="not_avail">不詳</string>
    <string name="strLat">緯度：</string>
    <string name="strLng">經線：</string>
    <string name="strDistance">距離：</string>
    <string name="strMeter">米</string>
    <string name="strEntering">進入&#8230;</string>
    <string name="content_thumbnail">縮圖</string>
    <string name="content_rightarrow">右箭嘴</string>
    <string name="content_image">圖片</string>
    <string name="content_qr_code">二維條碼</string>
    <string name="content_pin">標記</string>
    <string name="lblName">名稱：</string>
    <string name="lblDescription">介紹：</string>
    <string name="lblHomepage">網頁：</string>
    <string name="lblEmail">電郵：</string>
    <string name="lblPhone">電話：</string>
    <string name="lblAddress">地址：</string>
    <string name="lblLocation">地區：</string>
    <string name="lblHour">開放時間：</string>
    <string name="lblRemark">備註：</string>
    <string name="lblQRCode">網頁二維條碼：</string>
    <string name="dist_remark">從最近到最遠的距離 (以米計算)</string>
    <string name="strUpdateFreq">每隔五分鐘更新一次</string>
    <string name="menu_legalnotices">法律聲明</string>
    <string name="no_monument_errmsg">法定古蹟資料不存在。</string>
    <string name="strInfo">資訊</string>
    <string name="strAbout">關於隨時隨地遊古蹟</string>
    <string name="strDatasetSource">數據集的來源：</string>
    <string name="strChiDS">http://data.one.gov.hk/dataset/17/tc</string>
    <string name="strEngDS">http://data.one.gov.hk/dataset/17/en</string>
    <string name="copyright_year">2014</string>
    <string name="strDeveloper">開發人員</string>
    <string name="developer_resp1">構思應用程序的用法，設計程序界面，設計SQLite數據庫。</string>
    <string name="developer_resp2">構思應用程序的用法，收集數據，輸入數據，設計ICON。</string>
    <string name="strChi">中文：</string>
    <string name="strEng">英文：</string>
    <string name="copyright">版權所有</string>
    <string name="title_activity_wiki">維基百科</string>

    <string-array name="setting_array">
        <item>法定古蹟維基百科</item>
        <item>聯絡開發人員</item>
        <item>關於隨時隨地遊古蹟</item>
    </string-array>

    <string name="monument_heading">香港法定古蹟維基百科</string>
    <string name="monument_definition">香港法定古蹟，是指受到香港法例第53章《古物及古蹟條例》所保護的歷史建築、以及考古或古生物地點與構築物。古物事務監督經諮詢古物諮詢委員會，並經行政長官批准後，可刊憲公告宣布個別地方、建築物、地點或構築物為法定古蹟。</string>
    <string name="monument_source">資料來源：http://zh.wikipedia.org/wiki/香港法定古蹟</string>
    <string name="errUnknownBtnAction">此按鈕動作是無效的。</string>
    <string name="strGovHK">GovHK 香港政府一站通</string>
    <string name="strGovHK_ch_page">http://www.amo.gov.hk/b5/monuments.php</string>
    <string name="strGovHK_en_page">http://www.amo.gov.hk/en/monuments.php</string>

    <string-array name="strDepts">
        <item>@string/dept_heritage</item>
        <item>@string/dept_monument</item>
    </string-array>

    <string name="article_add_to_favorites">你的文章已加到入我的喜愛。</string>
    <string name="article_remove_from_favorites">你的文章已從我的喜愛中刪除。</string>
    <string name="content_imgBtnFav">我的喜愛按鈕</string>
    <string name="strSearchMonument">尋找 (最多三十字)</string>
    <string name="strLoadMore">載入更多</string>

    <string-array name="proximity_entries">
        <item>500 米</item>
        <item>1000 米</item>
        <item>1500 米</item>
        <item>2000 米</item>
        <item>2500 米</item>
        <item>3000 米</item>
    </string-array>
    <string-array name="proximity_values">
        <item>500</item>
        <item>1000</item>
        <item>1500</item>
        <item>2000</item>
        <item>2500</item>
        <item>3000</item>
    </string-array>

    <string name="around_me_category">尋找我周圍的法定古蹟偏好</string>
    <string name="strDistancePref">鄰近距離</string>
    
    <string name="enableGPS_title">啟用GPS</string>
    <string name="askGPS">你要啟用GPS嗎？</string>
    <string name="yesGPS">是的。 </string>
    <string name="noGPS">不用了，謝謝。</string>
</resources>
