<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/linen"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_horizontal"
        android:text="@string/placeholder"
        android:layout_marginTop="8dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btnHK"
        style="@style/ButtonMyTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/strHK" />

    <Button
        android:id="@+id/btnKowloon"
        style="@style/ButtonMyTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/strKowloon" />
    
    <Button
        android:id="@+id/btnNT"
        style="@style/ButtonMyTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/strNT" />
     
    <Button
        android:id="@+id/btnIsland"
        style="@style/ButtonMyTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/strIsland" />
        
</LinearLayout>