<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/linen"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
	    android:background="@color/linen"
        android:layout_gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/city_name" />
    
    <TextView
        android:id="@+id/tvRemark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
	    android:background="@color/linen"
        android:layout_gravity="left"
        android:layout_marginLeft="8dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/dist_remark" />

    <TextView
        android:id="@+id/tvFreq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
	    android:background="@color/linen"
        android:layout_gravity="left"
        android:layout_marginLeft="8dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/strUpdateFreq" />
    
    <ListView
        android:id="@id/android:list"
        android:divider="@color/magenta"
        android:dividerHeight="1dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    </ListView>

    <TextView
        android:id="@id/android:empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:textSize="24sp"
        android:text="@string/no_monument" />
</LinearLayout>
