<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/linen"
    android:orientation="vertical" >

    <LinearLayout android:id="@+id/bottom_control_bar"
		android:layout_width="match_parent" android:layout_height="wrap_content"
		android:layout_alignParentBottom="true">
		<Button android:layout_width="match_parent"
			android:layout_height="wrap_content" 
			android:id="@+id/btnLoadMore"
			android:text="@string/strLoadMore" />
	</LinearLayout>
    
    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:background="@color/linen"
        android:text="@string/strFavorite"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvHeader"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="8dp"
        android:hint="@string/strSearchMonument"
        android:inputType="textFilter"
        android:maxLength="30"
        android:maxLines="1" />

    <ListView
        android:id="@id/android:list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editSearch"
        android:divider="@color/magenta"
        android:dividerHeight="1dp"
        android:layout_above="@+id/bottom_control_bar">
    </ListView>

    <TextView
        android:id="@id/android:empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/android:list"
        android:gravity="center"
        android:text="@string/no_favorite"
        android:layout_above="@+id/bottom_control_bar"
        android:textSize="24sp" />

</RelativeLayout>
